# pandasync

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-docs.yml  ci-python.yml
docs/: mkdocs.yml
docs/docs/: architecture.md  contributing.md  getting-started.md  index.md
docs/docs/sdk/: python.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/pandasync/: __init__.py  config.py  device.py  exceptions.py  models.py  profiles.py
sdks/python/src/pandasync/cli/: __init__.py  connect.py  discover.py  main.py  serve.py  sniff.py  status.py  verify.py
sdks/python/src/pandasync/clock/: __init__.py  manager.py  ntp.py  ptp.py
sdks/python/src/pandasync/control/: __init__.py  api.py  dependencies.py  models.py
sdks/python/src/pandasync/control/routes/: connections.py  devices.py  events.py  receivers.py  sources.py  status.py  streams.py
sdks/python/src/pandasync/discovery/: __init__.py  cloud.py  dns_sd.py  manager.py  mdns.py
sdks/python/src/pandasync/transport/: __init__.py  quic.py  rtp.py  streams.py  webrtc.py
sdks/python/tests/: conftest.py  test_config.py  test_models.py
sdks/python/tests/cli/: test_cli.py
sdks/python/tests/clock/: test_manager.py
sdks/python/tests/control/: test_api.py  test_streams_api.py
sdks/python/tests/discovery/: test_discovery.py
sdks/python/tests/transport/: test_rtp.py  test_streams.py
spec/: README.md
spec/v0.1/: 00-introduction.md  01-transport.md  02-clock-sync.md  03-discovery.md  04-control-plane.md  05-api-reference.md
