[project]
name = "pandasync"
version = "0.1.0.dev0"
description = "PandaSync Python SDK -- networked audio transport"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "The PandaSync Authors" },
]
keywords = ["audio", "networking", "aes67", "ptp", "rtp", "mdns"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: System :: Networking",
]

dependencies = [
  "click>=8.1",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "zeroconf>=0.131",
  "rich>=13.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
pandasync = "pandasync.cli.main:cli"

[project.urls]
Homepage = "https://pandasync.io"
Documentation = "https://docs.pandasync.io"
Repository = "https://github.com/pandasync/pandasync"
Issues = "https://github.com/pandasync/pandasync/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pandasync"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses Depends() in function defaults — this is the standard pattern
"src/pandasync/control/routes/*.py" = ["B008", "TC001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
